[tool.poetry]
name = "calfreeslots"
version = "1.0.0"
description = "Command line utility to print free calendar slots in the coming days."
authors = ["Johannes Köster <johannes.koester@uni-due.de>"]
license = "MIT"

[tool.poetry.scripts]
calfreeslots = "calfreeslots:main"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
icalendar = "^4.1.0"
arrow = "^1.2.3"
recurring-ical-events = "^1.0.2-beta.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
